syntax = "proto3";

option csharp_namespace = "HospitalAPI";

package drug;

service gRPCDrugPurchaseService{
	rpc DrugDemand (DrugRequest) returns (DrugReply);
	rpc DrugPurchase (DrugRequest) returns (DrugReply);
}

message DrugRequest {
	string pharmacyUrl = 1;
	string name = 2;
	int32 amount = 3;
	string apiKey = 4;
}

message DrugReply {
	string message = 1;
	bool isOk = 2;
}